--- a/New_Labs/Lab6.Rmd
+++ b/New_Labs/Lab6.Rmd
@@ -14,7 +14,7 @@ output: html_document
 
 #### __RECORDING__
 
-Go to eClass and download the zip file "Lab6_Soundfiles", containing the following files. Note, you can also generate these sound files or, optionally, you can use your "a_stop_a.wav" and "a_stop.wav" files from Lab 2 or 5 and generate the other two sound files.
+Go to eClass and download the zip file "Lab6_Soundfiles", containing the following files. Note, you can also generate these sound files or, optionally, you can use your "a_stop_a.wav" and "a_stop.wav" files from Lab 2 and generate the other two sound files.
 
 | _File name_            | _Sounds to record_             |
 |:----------------------:|:------------------------------:|
